--- a/2348534_RL_Lab6.ipynb
+++ b/2348534_RL_Lab6.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMaf73FuJTOzQmcaUfvsZ9Q",
+      "authorship_tag": "ABX9TyMp4s/SUWdNAeneQl7kLeeF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -267,7 +267,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The trajectory analysis provided seems consistent with the information in the plot. Here's a breakdown of how it aligns:\n",
+        "The trajectory analysis provided seems consistent with the information in the plot.\n",
         "\n",
         "1. **Total States Visited: 15**\n",
         "   - The total number of steps (states visited) in the trajectory is 15. This is represented by the sum of all visit counts across the heatmap.\n",
@@ -284,8 +284,7 @@
         "     \\[\n",
         "     \\text{Revisit Rate} = \\frac{15 - 7}{15} = 0.53\n",
         "     \\]\n",
-        "\n",
-        "The analysis matches the data shown in the plot. If you'd like, I can verify or adjust the logic further based on any additional specifics you provide!"
+        "\n"
       ],
       "metadata": {
         "id": "UWmI5rVZ0Bx2"
